--- a/flask_advanced/supermarkets/templates/all_supermarkets.html
+++ b/flask_advanced/supermarkets/templates/all_supermarkets.html
@@ -5,8 +5,13 @@
         <h1 style="margin-left: 40px">List of supermarkets:</h1>
         <p></p>
         <ul style="margin-left: 40px">
+
             {% for market in data %}
-                <li><a href="{{url_for('markets.get_market', id=market['id'])}}">{{ market['name'] }}</a></li>
+                {% if session[market['name']] %}
+                    <li><a>{{ market['name'] }}</a></li>
+                {% else %}
+                    <li><a href="{{url_for('markets.get_market', id=market['id'])}}">{{ market['name'] }}</a></li>
+                {% endif %}
             {% endfor %}
 
         </ul>
